[gd_scene load_steps=22 format=2]

[ext_resource type="Script" path="res://objects/generic/sword_projectile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c6bljg5m822ai" path="res://sprites/objects/sword_projectile/ice_sword/frame03.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cnv5mm8qsdebk" path="res://sprites/objects/sword_projectile/ice_sword/frame06.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ct6bet8wr531g" path="res://sprites/objects/sword_projectile/fire_sword/frame01.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bxrny0tnw6e32" path="res://sprites/objects/sword_projectile/fire_sword/frame06.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cho3dhcg88uhc" path="res://sprites/objects/sword_projectile/ice_sword/frame02.png" id="6"]
[ext_resource type="Texture2D" uid="uid://be3jxbxw3n73v" path="res://sprites/objects/sword_projectile/ice_sword/frame04.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b5djoa5qirxyd" path="res://sprites/objects/sword_projectile/ice_sword/frame05.png" id="8"]
[ext_resource type="Texture2D" uid="uid://caqfyy0v1xpdh" path="res://sprites/objects/sword_projectile/fire_sword/frame02.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bq42rpq6r1e38" path="res://sprites/objects/sword_projectile/ice_sword/frame01.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bo4kbcyvoqgul" path="res://sprites/objects/sword_projectile/lightning_sword/frame004.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bvwwme2colx4i" path="res://sprites/objects/sword_projectile/fire_sword/frame03.png" id="12"]
[ext_resource type="Texture2D" uid="uid://jc5x5rtg5rms" path="res://sprites/objects/sword_projectile/fire_sword/frame04.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bfnfasaebrmvu" path="res://sprites/objects/flare/frame001.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cgxw6p3eg661c" path="res://sprites/objects/sword_projectile/fire_sword/frame05.png" id="15"]
[ext_resource type="Texture2D" uid="uid://o1ewjxmcqpw6" path="res://sprites/objects/sword_projectile/lightning_sword/frame001.png" id="16"]
[ext_resource type="Texture2D" uid="uid://8fq4sswirun4" path="res://sprites/objects/sword_projectile/lightning_sword/frame002.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cbuemworuj8yx" path="res://sprites/objects/sword_projectile/lightning_sword/frame003.png" id="18"]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 5 ) ],
"loop": true,
"name": "FIRE",
"speed": 20.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "ICE",
"speed": 20.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 11 ) ],
"loop": true,
"name": "LIGHTNING",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.0821

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.9533
height = 40.0

[node name="SwordProjectile" type="RigidBody2D"]
collision_layer = 16
mode = 2
mass = 0.0001
gravity_scale = 0.0
max_contacts_reported = 1
linear_damp = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 1 )
animation = "ICE"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 28, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 320

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 13.4102, 0.540375 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
modulate = Color( 1, 1, 1, 0.521569 )
light_mask = 0
position = Vector2( 27.5586, 0.540359 )
texture = ExtResource( 14 )
range_item_cull_mask = 335

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
